--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "taskify-api",
   "version": "1.0.0",
   "description": "A Node.js &amp; Express REST API with JWT-based authentication, role-based authorization, and MongoDB (Mongoose) for managing user-specific tasks.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "npx nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   },
   "homepage": "https://github.com/Harshit2783/taskify-api#readme",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "mongoose": "^9.0.2",
